--- a/client/modules/flamingo/flamingo-preview/flamingo-preview.component.scss
+++ b/client/modules/flamingo/flamingo-preview/flamingo-preview.component.scss
@@ -10,7 +10,8 @@
 .preview-container{
     width: 100%;
     height: 100%;
-    padding-top: 10%;
+    padding: 30px;
+    text-align: center;
 }
 .question-preview-container {
     margin-top: 10%;
@@ -37,4 +38,10 @@
     background: 100% auto;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.welcome-img{
+    margin: 30px auto;
+    width: 360px;
+    height: auto;
 }
